# Fargerik_node_rust_combo

./: README.md
first-project/: Cargo.toml  README.md  package-lock.json  package.json
first-project/src/: lib.rs  types.rs
node-express-typescript/: index.ts  package.json  types.ts
